# Capsaicin

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  get-pip.py  launch.vs.json  test.py
src/core/: CMakeLists.txt
src/core/include/: capsaicin.h  version.h.in
src/core/src/: gpu_shared.h  mesh.hlsl
src/core/src/capsaicin/: blit.frag  blit.vert  capsaicin.cpp  capsaicin_internal.cpp  capsaicin_internal.h  capsaicin_internal_dump.cpp  capsaicin_internal_scene.cpp  capsaicin_internal_types.h  common_functions.inl  convolve_ibl.comp  convolve_ibl.frag  convolve_ibl.vert  debug_depth.frag  dump_copy_aov_to_buffer.comp  factory.h  generate_animated_vertices.comp  graph.cpp  graph.h  hash_reduce.h  static_string.h  string_hash.h  thread_pool.cpp  thread_pool.h  timeable.cpp  timeable.h
src/core/src/components/: component.cpp  component.h
src/core/src/components/blue_noise_sampler/: blue_noise_sampler.cpp  blue_noise_sampler.h  blue_noise_sampler.hlsl  blue_noise_sampler_samples.h
src/core/src/components/brdf_lut/: brdf_lut.comp  brdf_lut.cpp  brdf_lut.h
src/core/src/components/light_builder/: gather_area_lights.comp  gather_area_lights.geom  gather_area_lights.vert  light_builder.cpp  light_builder.h  light_builder.hlsl  light_builder_shared.h
src/core/src/components/light_sampler/: gather_area_lights.geom  gather_area_lights.vert  light_sampler.cpp  light_sampler.h  light_sampler.hlsl  light_sampler_switcher.cpp  light_sampler_switcher.h  light_sampler_uniform.hlsl
src/core/src/components/light_sampler_bounds/: light_sampler_bounds.comp  light_sampler_bounds.cpp  light_sampler_bounds.h  light_sampler_bounds.hlsl  light_sampler_bounds_shared.h
src/core/src/components/light_sampler_grid_cdf/: light_sampler_grid.hlsl  light_sampler_grid_cdf.comp  light_sampler_grid_cdf.cpp  light_sampler_grid_cdf.h  light_sampler_grid_cdf.hlsl  light_sampler_grid_shared.h
src/core/src/components/light_sampler_grid_stream/: light_sampler_grid_stream.comp  light_sampler_grid_stream.cpp  light_sampler_grid_stream.h  light_sampler_grid_stream.hlsl  light_sampler_grid_stream_bounds.comp  light_sampler_grid_stream_build.comp
src/core/src/components/light_sampler_uniform/: light_sampler_uniform.cpp  light_sampler_uniform.h  light_sampler_uniform.hlsl
src/core/src/components/prefilter_ibl/: prefilter_ibl.cpp  prefilter_ibl.frag  prefilter_ibl.h  prefilter_ibl.vert
src/core/src/components/stratified_sampler/: stratified_sampler.cpp  stratified_sampler.h  stratified_sampler.hlsl  stratified_sampler_data.h
src/core/src/geometry/: geometry.hlsl  intersection.hlsl  mesh.hlsl  mis.hlsl  path_tracing.hlsl  path_tracing_shared.h  ray_intersection.hlsl  ray_tracing.hlsl
src/core/src/lights/: light_evaluation.hlsl  light_sampling.hlsl  light_sampling_volume.hlsl  lights.hlsl  lights_shared.h  reservoir.hlsl
src/core/src/materials/: material_evaluation.hlsl  material_sampling.hlsl  materials.hlsl
src/core/src/math/: color.hlsl  geometry.hlsl  hash.hlsl  math.hlsl  math_constants.hlsl  pack.hlsl  quaternion.hlsl  random.hlsl  sampling.hlsl  spherical_harmonics.hlsl  transform.hlsl
src/core/src/render_techniques/: render_technique.cpp  render_technique.h
src/core/src/render_techniques/atmosphere/: atmosphere.comp  atmosphere.cpp  atmosphere.h  atmosphere.hlsl
src/core/src/render_techniques/auto_exposure/: auto_exposure.comp  auto_exposure.cpp  auto_exposure.h
src/core/src/render_techniques/bloom/: bloom.cpp  bloom.h  blur.comp  combine.comp
src/core/src/render_techniques/color_grading/: color_grading.comp  color_grading.cpp  color_grading.h  color_grading_upload.comp
src/core/src/render_techniques/combine/: combine.comp  combine.cpp  combine.h
src/core/src/render_techniques/debug_textures/: debug_textures.cpp  debug_textures.frag  debug_textures.h
src/core/src/render_techniques/gi1/: gi1.comp  gi1.cpp  gi1.frag  gi1.h  gi1.hlsl  gi1.rt  gi1.vert  gi1_shared.h  gi_denoiser.hlsl  hash_grid_cache.hlsl  screen_probes.hlsl  world_space_restir.hlsl
src/core/src/render_techniques/gi10/: gi10.comp  gi10.cpp  gi10.frag  gi10.h  gi10.hlsl  gi10.rt  gi10.vert  gi10_shared.h  gi_denoiser.hlsl  glossy_reflections.hlsl  hash_grid_cache.hlsl  screen_probes.hlsl  world_space_restir.hlsl
src/core/src/render_techniques/image_metrics/: image_metrics.cpp  image_metrics.h
src/core/src/render_techniques/lens/: lens.comp  lens.cpp  lens.h
src/core/src/render_techniques/path_tracer/: reference_pt.comp  reference_pt.cpp  reference_pt.h  reference_pt_shared.h
src/core/src/render_techniques/reference_path_tracer/: reference_path_tracer.comp  reference_path_tracer.cpp  reference_path_tracer.h  reference_path_tracer.rt
src/core/src/render_techniques/skybox/: skybox.cpp  skybox.frag  skybox.h  skybox.vert
src/core/src/render_techniques/ssgi/: ssgi.comp  ssgi.cpp  ssgi.h  ssgi_debug.comp  ssgi_shared.h
src/core/src/render_techniques/switcher/: switcher.h
src/core/src/render_techniques/taa/: taa.comp  taa.cpp  taa.h  update_history.comp  update_history.cpp  update_history.h
src/core/src/render_techniques/tone_mapping/: tone_mapping.comp  tone_mapping.cpp  tone_mapping.h
src/core/src/render_techniques/variance_estimate/: variance_estimate.comp  variance_estimate.cpp  variance_estimate.h
src/core/src/render_techniques/visibility_buffer/: debug_dxr10.rt  debug_material.frag  debug_material.vert  debug_meshlets.frag  debug_meshlets.task  debug_velocity.frag  debug_velocity.vert  debug_wireframe.frag  debug_wireframe.mesh  disocclusion_mask.comp  visibility_buffer.cpp  visibility_buffer.frag  (+7 more)
src/core/src/renderers/: renderer.cpp  renderer.h
src/core/src/utilities/: buffer_view.h  gpu_image_metrics.comp  gpu_image_metrics.cpp  gpu_image_metrics.h  gpu_mip.comp  gpu_mip.cpp  gpu_mip.h  gpu_mip2.comp  gpu_readback.cpp  gpu_readback.h  gpu_reduce.comp  gpu_reduce.cpp  gpu_reduce.h  gpu_sort.comp  gpu_sort.cpp  gpu_sort.h
src/scene_viewer/: CMakeLists.txt  main.cpp  main_shared.cpp  main_shared.h
(+19 files in other folders)
